--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,16 @@ dependencies = [
     "mem0ai>=0.1.88",
     "vecs>=0.4.5"
 ]
+
+[tool.mcp]
+command = "python"
+args = ["main.py"]
+
+[tool.mcp.env]
+TRANSPORT = "stdio"
+LLM_PROVIDER = "openai"
+LLM_BASE_URL = "https://api.openai.com/v1"
+LLM_API_KEY = "sk-your-openai-api-key-here"
+LLM_CHOICE = "gpt-4o-mini"
+EMBEDDING_MODEL_CHOICE = "text-embedding-3-small"
+DATABASE_URL = "postgresql://mem0user:mem0password@localhost:5432/mem0db"
