feat: Add automated Docker startup with restart policies
- Added restart: unless-stopped to docker-compose.yml for auto-restart
- Created auto_start.bat for one-click automated startup
- Added start_server.py smart startup script with container detection
- Updated README.md with automated startup documentation
- Containers now start automatically when Docker starts
- Zero manual intervention required for daily usage
- Auto-recovery from crashes and Docker restarts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   postgres:
     image: pgvector/pgvector:pg15
+    restart: unless-stopped
     environment:
       POSTGRES_DB: mem0db
       POSTGRES_USER: mem0user
@@ -22,6 +23,7 @@ services:
       context: .
       args:
         PORT: 8050
+    restart: unless-stopped
     ports:
       - "8050:8050"
     environment:
